--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@nebular/theme": "3.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@swimlane/ngx-charts": "^10.0.0",
+    "@syncfusion/ej2-angular-schedule": "^17.1.39",
     "angular-tree-component": "7.2.0",
     "angular2-chartjs": "0.4.1",
     "angular2-toaster": "^6.1.0",
