--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/common": "^7.0.3",
     "@angular/compiler": "^7.0.3",
     "@angular/core": "^7.0.3",
+    "@angular/fire": "^5.1.2",
     "@angular/forms": "^7.0.3",
     "@angular/http": "^7.0.3",
     "@angular/platform-browser": "^7.0.3",
@@ -63,6 +64,7 @@
     "core-js": "2.5.1",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.0",
+    "firebase": "^5.9.2",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
