--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular/fire": "^5.1.2",
     "@angular/forms": "^7.0.3",
     "@angular/http": "^7.0.3",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "^7.0.3",
     "@angular/platform-browser-dynamic": "^7.0.3",
     "@angular/router": "^7.0.3",
