--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "docs": "compodoc -p src/tsconfig.app.json -d docs",
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
     "prepush": "npm run lint:ci",
-    "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s"
+    "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
+    "start:server": "nodemon server.js"
   },
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
@@ -58,6 +59,7 @@
     "angular-tree-component": "7.2.0",
     "angular2-chartjs": "0.4.1",
     "angular2-toaster": "^6.1.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.0.0",
     "chart.js": "2.7.1",
     "ckeditor": "4.7.3",
@@ -65,6 +67,7 @@
     "core-js": "2.5.1",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.0",
+    "express": "^4.17.1",
     "firebase": "^5.9.3",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
@@ -74,6 +77,7 @@
     "ng2-completer": "2.0.8",
     "ng2-smart-table": "^1.3.5",
     "ngx-echarts": "^4.0.1",
+    "nodemailer": "^6.3.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
@@ -87,8 +91,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.10.2",
-    "@angular/compiler-cli": "^7.0.3",
     "@angular/cli": "^7.0.3",
+    "@angular/compiler-cli": "^7.0.3",
     "@angular/language-service": "7.0.0",
     "@compodoc/compodoc": "1.0.1",
     "@fortawesome/fontawesome-free": "^5.2.0",
@@ -109,6 +113,7 @@
     "karma-coverage-istanbul-reporter": "1.3.0",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
+    "nodemon": "^1.19.1",
     "npm-run-all": "4.0.2",
     "protractor": "5.1.2",
     "rimraf": "2.6.1",
